@@ -58,6 +58,7 @@ Changes Since 0.12
     ``default_stylesheet_path`` and ``default_template_path``.
   - Fix [ 266 ] creating labels/class values in description list items.
   - Do not use <sup> and <sub> tags inside <pre> (parsed-literal blocks).
+  - Fix footnotes with content that does not start with a paragraph.
 
 * docutils/writers/latex2e/__init__.py
 
